Fixed tracking issue on mobile ColorStack version of PrettyGrid Offerings and image overlay stylings for bonsai header combined with SparklyGrid Offerings. Now on v2.1.10

--- a/src/styles/components/header-style/_bonsai-grid.scss
+++ b/src/styles/components/header-style/_bonsai-grid.scss
@@ -31,6 +31,11 @@
             width: 100%;
             z-index:10;
         }
+        &.offerings-variable--sparkly-dragon {
+            .offerGrid .documentsImg {
+                max-width: 170px;
+            }
+        }
         &.offerings-variable--pretty-grid .offerGrid .documentsImg {
             max-width:200px;
             @media (min-width: 1005px) {
